--- a/surefire-integration-tests/pom.xml
+++ b/surefire-integration-tests/pom.xml
@@ -101,6 +101,9 @@
           <includes>
             <include>org/apache/**/*IT*.java</include>
           </includes>
+          <excludes>
+            <exclude>org/apache/**/*Java9*IT.java</exclude>
+          </excludes>
           <!-- Pass current surefire version to the main suite so that it -->
           <!-- can forward to all integration test projects. SUREFIRE-513 -->
           <systemPropertyVariables>
